--- a/package.json
+++ b/package.json
@@ -29,6 +29,22 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "eslint": "^5.6.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-mocha": "^5.2.0",
+    "faker": "^4.1.0",
     "mocha": "^5.2.0"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lesleydreyer/LetsRoll.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lesleydreyer/LetsRoll/issues"
+  },
+  "homepage": "https://github.com/lesleydreyer/LetsRoll#readme"
 }
